# ThunderKittens

./: .clang-format  .gitignore  1017_testnan.ipynb  COMMON.md  Dockerfile  Doxyfile  LICENSE  README.md  compile_commands.json  config.py  docker-compose.yml  env.src  fp8-todo.md  git_config.sh  setup.bat  setup.py  thunderkittens.cpp  todo.md
.claude/: CLAUDE.md  settings.json
benchmarks/: README.md  benchmark_kernels.py  get_flops.py  plot.py
demos/: README.md  requirements.txt
demos/kvm-runner/: .gitignore  README.md  pyproject.toml  timing_plot.py
demos/kvm-runner/kvm_batch_runner/: README.md  generate.py  instructions.py  kvm.py  llama.py  model_types.py  python_vm.py  run_noops.py  scheduler.py  test_kvm.py  utils.py
demos/kvm-runner/kvm_runner/: generate.py  instructions.py  kvm.py  llama.py  model_types.py  python_vm.py  run_noops.py  scheduler.py  test_kvm.py  timings.ipynb  types.py  utils.py
demos/kvm-runner/kvm_unity/: diff_test.py  dispatch.py  generate.py  generators.py  instructions.py  kvm.py  llama.py  model_types.py  python_vm.py  scheduler.py  test_latencies.py  utils.py
demos/kvm-runner/kvm_unity/latency/: instructions.py  kvm.py  python_vm.py  scheduler.py
demos/kvm-runner/kvm_unity/scripts/: bench_engines.py  llama_repl.py  make_torch_profile.py
demos/kvm-runner/kvm_unity/throughput/: instructions.py  kvm.py  python_vm.py  scheduler.py
demos/kvm-runner/notebooks/: timings.ipynb
docs/: conda_setup.md  conf.py  index.rst
include/: kittens.cuh  (+1 more)
tests/python/ring_attention/original/: .gitignore  README.md  pyproject.toml  ringattention_pallas_gpu.py  ringattention_pallas_tpu.py  test_correctness.py
tests/python/ring_attention/original/ringattention/: ringattention_jax.py  ringattention_pallas_gpu.py
(+2244 files in other folders)
