[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megakernels"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==4.48.3",
    "pydra-config>=0.0.13",
    "accelerate",
    "tabulate",
    "tqdm",
    "matplotlib",
    "einops",
    "pyright",
    "openai",
    "psutil",
    "art",
]

[tool.setuptools]
packages = {find = {}}