[project]
name = "ringattention"
version = "0.1.2"
description = "RingAttention for Transformers with Arbitrarily Large Context."
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax>=0.4.29",
    "einops",
    "flax",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/forhaoliu/ringattention"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ringattention"]
